Adding deletion. Updated todo
